@@ -1,3 +1,11 @@
-# Something
+# petergo.github.io
 
-Hello! My name is Peter Go. Enjoy looking at my webpage!
+A short description about the project and/or client.
+
+## Project Description
+
+The project is for a personal webpage, with some consideration and implementation of my Computer Science Course work displays. The webiste will also feature weather implementation along with ISS LIVE Telemetry Data.
+
+### Website
+
+petergo7.github.io/getergo.github.io/main.html
