@@ -1,42 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .centerObj {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .flexBody {
-            display:flex; 
-            flex-direction:column;
-            flex: 2;
-            margin: 0;
-            min-height: 100vh; /*This min-height thingy makes sure that the flex direction is in the maximum fleeeeeeex! Just don't delete it ok? :) */
-        }
-
-        .flexArticle {
-            display:flex; 
-            flex-direction:column;
-            flex: 1;
-            font-family: monaco, monospace;
-        }
-
-        .sourceCodeDark {
-            font-family: 'Courier New', Courier, monospace;
-            float: left;
-            text-align: center;
-            color: #FFFFFFFF;
-            border-radius: 5px;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 3px;
-            padding-bottom: 3px;
-            font-size: 36px;
-            font-style: normal;
-            background-color: #6f006f;
-            margin: 10px;
-        }
-    </style>
+    <title>Change Log -petergo7</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:ital,wght@1,700;400;200">
+    <link rel="stylesheet" type = "text/css" href="CSS/cssMain.css">
     <body class = "flexBody">
         <article class = "flexArticle">
             <a href = "main.html" class = "sourceCodeDark centerObj">
