@@ -61,6 +61,8 @@ Nov 17th PU14 (Peter) - JFocus Project Easier Viewing webpage creation started
 Nov 17th PU15 (Peter) - JFocus Project Easier Viewing webpage creation finished. Testing Beginning soon.
 Nov 17th PU16 (Peter) - JFocus folder couldn't access the CSS file. That's all fixed and in order now!
 Nov 17th PU17 (Peter) - JFocus redirect added and text removed
+Nov 17th PU18 (Peter) - Old files updated
+
 
 
 Thanks for taking your time to read the change log! 
